css/style.css
/* CSS RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* CUSTOM PROPERTIES */
:root {
    --main-color: #141922;
    --secondary-color: #282828;
    --font-color: #85878c;
    --detail-color: #adff2f;
    --bar-empty-color: #5a5a5a;
    --bar-full-color: #c1c1c1;
    --fixed-space-sm: 50px;
    --fixed-space-md: 80px;
    --fixed-space-lg: 200px;
    --padding-space-xxs: 5px;
    --padding-space-xs: 10px;
    --padding-space-sm: 20px;
    --padding-space-md: 40px;
    --font-size-xs: 12px;
    --font-size-sm: 14px;
    --font-size-md: 24px;
    --font-size-lg: 30px;
    --font-size-xl: 40px;
    --font-size-xxl: 60px;
}

/* UTILITY */
body {
    font-family: 'Montserrat', sans-serif;
    color: white;
}

.wrap {
    flex-wrap: wrap;
}

.d-flex {
    display: flex;
}

.align-center {
    align-items: center;
}

.just-center {
    justify-content: center;
}

.just-bet {
    justify-content: space-between;
}

.space-around {
    justify-content: space-around;
}

.padding-top-bot {
    padding: var(--padding-space-sm) 0px;
}

a {
    color: var(--font-color);
    text-decoration: none;
    font-weight: 700;
    transition: color 0.5s;
}

h1 {
    font-size: var(--font-size-md);
}

h4 {
    font-size: var(--font-size-sm);
}

ul li {
    list-style-type: none;
    transition: color 0.5s;
}

li:hover {
    color: white;
}

a:hover {
    color: white;
} 

.btn {
    border: 1px solid white;
    border-radius: 25px;
    padding: 12px 35px;
    font-size: var(--font-size-xs);
    color: white;
}

.btn:hover {
    font-size: var(--font-size-sm);
}

#btn-add {
    background-color: var(--font-color);
    color: black;
    font-size: var(--font-size-lg);
    font-weight: 500;
    padding: 0px 12px;
}

#btn-add:hover {
    background-color: var(--bar-full-color);
}

.display-tablet {
    display: none;
}

.round-img {
    border-radius: 100%;
    object-fit: cover;
}

/* SIDEBAR */
.sidebar {
    background-color: black;
    flex: 0 0 var(--fixed-space-sm);
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: auto;
}

.sidebar img {
    width: 30px;
    padding-top: 5px;
}

#logo-lg {
    display: none;
}

.playlist {
    padding: 15px 0px 5px 0px;
}

.playlist * {
    padding: 5px 0px;
}

.playlist > a {
    color: white;
}

#down-arrow {
    width: 15px;
}

#user {
    width: 30px;
    height: 30px;
    background-color: var(--font-color);
    border-radius: 100%;
}

.download-side > div:not(.div-border) {
    padding: var(--padding-space-xs) 0px;
}

.download-side span {
    padding-left: var(--padding-space-xxs);
}

.div-border {
    width: 180px;
    border-top: 1px solid var(--font-color);
}

/* MAIN */
main {
    height: calc(100vh - 80px);
}

.main-container {
    background-color: var(--main-color);
    overflow-y: auto;
    flex: 1 1 auto;
}

.inside-header {
    height: var(--fixed-space-md);
    background-color: rgba(0, 0, 0, 0.5);
    position: sticky;
    z-index: 1;
    top: 0px;
    right: 0px;
    justify-content: right;
}

.main-container > div {
    padding: 0px var(--padding-space-sm);
}

.menu {
    height: var(--fixed-space-md);
    font-size: var(--font-size-sm);
}

.menu li {
    padding: 0 var(--padding-space-xs);
}

menu li a {
    color: var(--font-color);
}

/* RECENTLY */
.col img {
    max-width: 100%;
}

.thumbnail {
    transition: filter 0.5s;
}

.col:hover {
    cursor: pointer;
}

.col:hover .thumbnail {
    filter: brightness(0.5);
}

.thumbplay {
    display: none;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    cursor: pointer;
    font-size: var(--font-size-xxl);
}

.col:hover .thumbplay {
    display: initial;
}

.col > div {
    position: relative;
}

.thumb-container * {
    padding: var(--padding-space-xxs) 0px;
}

.row {
    gap: 15px;
}

.col {
    height: 100%;
    text-align: center;
    flex-basis: calc(100% / 2 - 15px);
}

.subtitle {
    color: var(--font-color);
    font-size: var(--font-size-xs);
    font-weight: 700;
}

/* FOOTER */
footer {
    height: var(--fixed-space-md);
    background-color: var(--secondary-color);
}

footer i {
    color: white;
    padding: 0px var(--padding-space-xxs);
}

.controls i {
    font-size: var(--font-size-lg);
}

footer i:hover {
    color: var(--detail-color);
}

.on-playing img {
    padding-right: var(--padding-space-xs);
    height: 40px;
    width: 40px;
}

.on-playing, .share {
    flex-basis: 25%;
    padding: 0px var(--padding-space-xs);
}

.on-playing h1 {
    font-size: var(--font-size-xs);
}

.player {
    flex-basis: 500px;
}

.time-bar {
    width: 100%;
    height: 5px;
    background-color: var(--bar-empty-color);
    cursor: pointer;
}

.progress {
    height: 100%;
    width: 25%;
    background: var(--bar-full-color);
    position: relative;
}

.progress .dot {
    display: none;
    position: absolute;
    right: 0;
    bottom: 50%;
    transform: translate(50%, 50%);
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background-color: var(--bar-full-color);
}

.bar:hover .progress {
    background-color: var(--detail-color);
}

.bar:hover .dot {
    display: block;
}

.bar span {
    padding: 0px var(--padding-space-xxs);
    font-size: var(--font-size-xs);
    font-weight: 500;
}

/************************/
/*      RESPONSIVE      */
/************************/

/* SCREEN @768px */

@media screen and (min-width: 768px) {

    /* Utility */
    .display-tablet {
        display: block;
    }

    .sidebar {
        flex: 0 0 var(--fixed-space-lg);
    }

    .sidebar img  {
        display: block;
    }

    .sidebar > div {
        padding-left: var(--padding-space-xs);
    }

    .sidebar ul li {
        display: flex;
        align-items: center;
        cursor: pointer;
    }

    #logo-sm {
        display: none;
    }

    #logo-lg {
        display: block;
        width: 150px;
        height: 80px;
    }

    .playlist {
        display: flex;
        align-items: flex-start;
        justify-content: flex-start;
        flex-direction: column;
    }

    .col {
        flex-basis: calc(100% / 4 - 30px);
    }

    .download-side div {
        display: flex;
        align-items: center;
    }

    .on-playing img {
        height: 50px;
        width: 50px;
    }
}

/* SCREEN @992px */
@media screen and (min-width: 1200px) {

    .col {
        flex-basis: calc(100% / 6 - 60px);
    }

    .recently > .row {
        justify-content: space-between;
    }

}

